changed CI, added empty helmcharts, started testing
